[fixed] dark mode

--- a/styles/style.css
+++ b/styles/style.css
@@ -30,6 +30,7 @@
 
 	--accent-color: #664e83;
 	--bg-color: #fff;
+	--bg-color-other: #2a2a2a;
 	--bg-linear-gradient-color-1: rgba(106, 82, 137, 1);
 	--bg-linear-gradient-color-2: rgba(127, 166, 192, 1);
 	--bg-linear-gradient: linear-gradient(
@@ -50,6 +51,10 @@
 		--font-color-for-accent-color: var(--bg-color);
 		--accent-color: #a7cde6;
 		--bg-color: #2a2a2a;
+		--bg-color-other: var(--font-color);
+	}
+	.progress.voltooid {
+		color: var(--bg-color) !important;
 	}
 }
 
@@ -96,6 +101,9 @@ h1 {
 header > h2 {
 	color: var(--font-color);
 }
+h3 {
+	color: var(--font-color);
+}
 
 a {
 	color: var(--accent-color);
@@ -114,6 +122,10 @@ hr {
 	margin: 1rem 0;
 	border: none;
 	border-top: 0.1rem solid var(--font-color);
+}
+
+p[class^='schaal_'] {
+	color: var(--font-color);
 }
 
 .content {
@@ -511,9 +523,9 @@ a[href='/confirmed.html']:focus-visible {
 }
 
 a[href='/confirmed.html'].disable {
-	color: #2a2a2a;
+	color: var(--bg-color-other);
 	text-decoration: line-through;
-	border-color: #2a2a2a;
+	border-color: var(--bg-color-other);
 	cursor: auto;
 	user-select: none;
 }
